# wiutils

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  README.md  conftest.py  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg  tox.ini
docs/: conf.py  contribute.md  index.md  index.rst  installation.rst  reference.md  requirements.txt
docs/guide/: darwincore.md  extraction.md  filtering.md  plotting.md  preprocessing.md  reading.md  summarizing.md
docs/reference/: darwincore.md  filtering.md  preprocessing.md  reading.md  summarizing.md
docs/stylesheets/: extra.css
docs/wiutils/: index.rst
tests/darwincore/: test_create_dwc_archive.py  test_create_dwc_event.py  test_create_dwc_events.py  test_create_dwc_measurement.py  test_create_dwc_multimedia.py  test_create_dwc_occurrence.py  test_create_dwc_records.py
tests/extraction/: test_get_date_ranges.py  test_get_lowest_taxon.py  test_get_scientific_name.py
tests/extractors/: test_get_scientific_name.py
tests/filtering/: test_remove_domestic.py  test_remove_duplicates.py  test_remove_inconsistent_dates.py  test_remove_unidentified.py
tests/filters/: test_remove_domestic.py  test_remove_duplicates.py  test_remove_inconsistent_dates.py  test_remove_unidentified.py
tests/plotting/: test_plot_activity_hours.py  test_plot_date_ranges.py  (+2 more)
wiutils/: __init__.py  _converters.py  _helpers.py  darwincore.py  extraction.py  filtering.py  filters.py  io.py  plotting.py  preprocessing.py  preprocessors.py  readers.py  reading.py  summarizing.py  tables.py  transformation.py  transformers.py  verification.py
(+65 files in other folders)
