[tool.poetry]
name = "wiutils"
version = "0.1.0"
description = "Utilities for information downloaded from Wildlife Insights."
authors = ["Marcelo Villa-Piñeros <mvilla@humboldt.org.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.22.0"
pytest = "^6.2.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
