[metadata]
name = wiutils
version = 0.1.1
author = Marcelo Villa-Piñeros
author_email = mvilla@humboldt.org.co
description = Transformation and exploration utilities for information downloaded from Wildlife Insights projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PEM-Humboldt/wildlife-insights-utils
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    ffmpeg-python
    numpy
    opencv-python
    openpyxl
    pandas
    pillow
packages = find:
zip_safe = False

[options.extras_require]
dev =
    black
    ipython
docs =
    sphinx
    sphinx-rtd-theme
test =
    coverage
    pytest
